tests/ui/fail/python_power_operator.stderr
error: Potentially invalid expansion. Expected `::`, `break`, `if`, `return`, a `(`, a `[` or 3 others.
 --> tests/ui/fail/python_power_operator.rs:5:14
  |
5 |         $e * *$e
  |              ^
